clean unused code, create security component/resource
